Fix phone swagger + hapus input phone
Ganti dokumentasi swagger di user service
